Update hw7.6_FancyImageApp.md